--- a/openinfra_core/src/main/webapp/css/style.css
+++ b/openinfra_core/src/main/webapp/css/style.css
@@ -38,6 +38,11 @@ table tr td {
 	display: block;
 }
 
+/* styling of the button bar */
+#buttonBar > a > i {
+	margin-right: 10px;
+}
+
 #map {
   	height: 250px;
   	cursor: pointer;
@@ -81,4 +86,9 @@ table tr td {
 #gxc-container:fullscreen {
   	width: 100%;
   	height: 100%;
+}
+
+/* styling of the close button of the message boxes */
+#success > div > i, #alert > div > i {
+	cursor: pointer;
 }
