--- a/openinfra_core/src/main/webapp/css/style.css
+++ b/openinfra_core/src/main/webapp/css/style.css
@@ -38,11 +38,6 @@ table tr td {
 	display: block;
 }
 
-/* styling of the button bar */
-#buttonBar > a > i {
-	margin-right: 10px;
-}
-
 #map {
   	height: 250px;
   	cursor: pointer;
@@ -86,6 +81,18 @@ table tr td {
 #gxc-container:fullscreen {
   	width: 100%;
   	height: 100%;
+}
+
+/* controls distance of the buttons on the button bar */
+#singleButtonBar {
+	margin-right: 30px;
+	float: right;
+}
+
+/* override the size of the awesome fonts icons in the button bar because 1 is
+   to small and 2 to large */
+#singleButtonBar > a > i {
+	font-size: 1.5em;
 }
 
 /* styling of the close button of the message boxes */
