added github commit list to project page
In addition to put the project online we inserted an overview of the
last twenty commits for the core.

--- a/openinfra_core/src/main/webapp/css/style.css
+++ b/openinfra_core/src/main/webapp/css/style.css
@@ -106,3 +106,8 @@ table tr td {
 	cursor: pointer;
 }
 
+/* styling of the commit list on the project page */	
+#githubDiv {
+	height : 600px;
+	overflow: auto;
+}
