updated filterAndOrderBy snippet
The filterAndOrderBy.jsp was separated in two different snippets. This
gives the flexibility to decide which filter we want to integrate into
our page. Further the new orderBy snippet was updated to support columns
that must be generated from attribute types.

--- a/openinfra_core/src/main/webapp/css/style.css
+++ b/openinfra_core/src/main/webapp/css/style.css
@@ -19,6 +19,10 @@ a:hover, a:focus {
 	text-decoration: none;
 }
 
+#orderAndFilterRow {
+	padding-bottom: 15px;
+}
+
 .border {
     border: 1px solid black;
     padding: 3px;
