--- a/openinfra_core/src/main/webapp/css/style.css
+++ b/openinfra_core/src/main/webapp/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 5px;
-    padding-top: 245px;
+    /* padding-top: 245px; */
+    padding-top: 190px;
     /* css hack to avoid body shifting while opening modal dialog from bootstrap,
        doesn't work perfectly if a scroll bar is present */
     padding-right: 0px !important;
